# pyWindMesh

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py
src/application/interfaces/: __init__.py  mesh_plotter.py
src/domain/: __init__.py  grid2d.py  grid3d.py  gridSmoother2D.py  mesh2d.py  spatialValueProvider.py
src/infrastructure/: timer.py
src/infrastructure/exporters/: __init__.py  gmsh.py  openFoam.py  pyvista.py
src/infrastructure/mesh/: __init__.py  gridMesh2d.py  meshUtils.py  quality.py  structuredHexMesh3d.py  verticalLayersDistributor.py  zoneConfig.py
src/infrastructure/meshSmoother/: __init__.py  surfaceMaxAngleSmoothing.py  surfaceSquerifyFaces.py
src/infrastructure/plotting/: __init__.py  groundGridPlot.py  meshPlot3D.py
src/infrastructure/topography/: __init__.py  gaussianHill.py  lasTopography.py  topographyUtils.py
src/mesh/: __init__.py  mesh2d.py
src/meshSmoother/: __init__.py  meshSmoother2D.py  surfaceMaxAngleSmoothing.py
src/topography/: __init__.py  gaussianHill.py  lasTopography.py  topography.py
