[project]
name = "pywindmesh"
version = "0.1.0"
description = ""
authors = [
    {name = "Pawel Gancarski",email = "pgancarski@gmail.com"}
]
license = {text = "GNU"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "laspy[lazrs] (>=2.6.1,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "numba (>=0.62.1,<0.63.0)",
    "pyvista (>=0.46.4,<0.47.0)",
    "cmocean (>=4.0.3,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false